# machine-learning-zoomcamp

./: Deep_learning_Homework.ipynb
08-deep-learning/: Deep_learning_Homework.ipynb  Homework_08_1.ipynb  PyTorch_ML_Zoomcamp_Workshop.ipynb  snapshot_for_model_training.docx
09-serverless/: lambda_function.py  pyproject.toml  tensorflow-model.ipynb  test.py
09-serverless/sklearn/: invoke.py
